--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,3 +40,17 @@
 a{
   margin: 10px;
 }
+
+svg{
+  width: 50px;
+  height: 50px;
+}
+
+img{
+  width: 200px;
+  height: 200px;
+}
+
+.profile-section{
+  border: solid 1px grey;
+}
