--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,7 +48,30 @@ html{
   font-family: 'Rubik', sans-serif;
   font-size: 20px;
   font-weight: 500;
-  color: var(--blue);
+  color: blue;
+}
+
+button.logout-button {
+  width: 160px;
+  height: 65px;
+  border-radius: 62.5px;
+  background-color: white;
+  font-family: 'Rubik', sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  color: blue;
+}
+
+button {
+  width: 160px;
+  height: 50px;
+  border-radius: 62.5px;
+  background-color: white;
+  font-family: 'Rubik', sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  color: blue;
+  margin: 5px;
 }
 
 .wufph{
@@ -118,6 +141,10 @@ div.landing {
   display: flex;
 }
 
+div.user-card {
+  margin: 0 auto;
+}
+
 .paw-image {
   display: inline-block;
   vertical-align: center;
@@ -157,16 +184,23 @@ div.landing {
   font-family: 'Rubik', sans-serif;
 }
 
+p.form-label {
+  font-family: 'Rubik', sans-serif;
+  font-size: 25px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  letter-spacing: normal;
+  color: white;
+}
+
 input {
+  margin: 5px;
   width: 421px;
   height: 45px;
   border-radius: 62.5px;
   background-color: white;
-  margin: 1;
-}
-
-button {
-  margin: 1;
+  padding: 0px 0px 0px 20px;
 }
 
 .slack {
@@ -187,6 +221,10 @@ button {
   color: #d5d5d6;
 }
 
+div.profile {
+  margin: 0 auto;
+}
+
 Footer {
   font-family: 'Rubik', sans-serif;
   font-size: 15px;
@@ -196,8 +234,9 @@ Footer {
   line-height: normal;
   letter-spacing: normal;
   color: white;
-  position: absolute;
+  position: fixed; 
   bottom: 0;
-  width: 100%;
-  height: 0.5rem; 
+  left: 0;
+  right: 0;
+  height: 50px;
 }
