--- a/client/src/App.css
+++ b/client/src/App.css
@@ -267,3 +267,15 @@ Footer {
   right: 0;
   height: 50px;
 }
+
+.home{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.team{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
