--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,13 +5,21 @@ html{
   --marine-blue: #002468;
   --navy-blue:#001b4f;
   background-image: linear-gradient(to bottom, var(--blue), var(--blue), var(--marine-blue), var(--navy-blue));
+  min-height: 100%;
 }
 
+body{
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  margin: 0px;
+}
 .App {
   text-align: center;
-  min-height: 100vh;
+  min-height: 100%;
   margin: 0px;
   color: white;
+  margin: 0px;
 }
 
 .header{
@@ -261,7 +269,7 @@ Footer {
   line-height: normal;
   letter-spacing: normal;
   color: white;
-  position: fixed; 
+  position: relative; 
   bottom: 0;
   left: 0;
   right: 0;
